// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modify Appointment Renders Modify Appointment in desktop 1`] = `
<div>
  <div
    class="MuiBox-root css-1k9ek97"
  >
    <div
      class="MuiBox-root css-c9m4iq"
    >
      <h2>
        Cancel Appointment
      </h2>
      <div
        id="lexcontainercancel"
      />
    </div>
    <div
      class="MuiBox-root css-c9m4iq"
    >
      <h2>
        Modify Appointment
      </h2>
      <div
        id="lexcontainermodify"
      />
    </div>
  </div>
</div>
`;

exports[`Modify Appointment Renders Modify Appointment in mobile 1`] = `
<div>
  <div
    class="MuiBox-root css-1k9ek97"
  >
    <div
      class="MuiBox-root css-vq0h59"
    >
      <h2>
        Cancel Appointment
      </h2>
      <div
        id="lexcontainercancel"
      />
    </div>
    <div
      class="MuiBox-root css-vq0h59"
    >
      <h2>
        Modify Appointment
      </h2>
      <div
        id="lexcontainermodify"
      />
    </div>
  </div>
</div>
`;
